# VulkanApp

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
headers/: AllocatedBuffer.h  App.h  Mesh.h  RenderData.h  Renderer.h  Vertex.h  VulkanEngine.h  Window.h
luts/: cinedrama.cube  cinematic.cube  day-night.cube
premake/: premake5-linux.lua  premake5-windows.lua  premake5.lua
scenes/: demo.json  room.json
scripts/: setup.bat  setup.sh
shaders/: bloom.comp  bright_pass.comp  color_grading.comp  colored_triangle_mesh.vert  compile_shaders.bat  composite.comp  computeShader.comp  computeShader.spv  downsample.comp  downscale.comp  frag.frag  ray_tracing.comp  ray_tracing.spv  tone_mapping.comp  upsample.comp  upscale.comp  vert.spv  vert.vert
src/: App.cpp  Application.cpp  Application.h  Camera.cpp  Camera.h  Descriptors.cpp  Descriptors.h  FileWatcher.cpp  FileWatcher.h  Image.cpp  Image.h  Material.h  Object.cpp  Object.h  Pipelines.cpp  Pipelines.h  Plane.cpp  Plane.h  Random.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.h  Sphere.cpp  Sphere.h  Types.h  VulkanEngine.cpp  VulkanEngine.h  VulkanRayTracer.vcxproj  VulkanTypes.h  Window.cpp  imgui.ini  main.cpp
src/Vulkan/: VulkanEngine.cpp  VulkanEngine.h  VulkanTypes.h
vendors/glfw/: GLFW.vcxproj
vendors/imgui/: ImGui.vcxproj
vendors/vk-bootstrap/: vk-bootstrap.vcxproj
